fixed spacing for projects

--- a/src/components/pages/Projects/Projects.css
+++ b/src/components/pages/Projects/Projects.css
@@ -17,6 +17,8 @@
 .projectCol{
     margin-top: 25px;
     margin-bottom: 25px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
