--- a/src/components/pages/experiences/Experiences.css
+++ b/src/components/pages/experiences/Experiences.css
@@ -13,6 +13,8 @@
 .experienceCol{
   margin-top: 25px;
   margin-bottom: 25px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .experienceCardImage{
